@@ -60,8 +60,11 @@
 #if wxUSE_DIRDLG
 
 #include "wx/dialog.h"
-#include "wx/checkbox.h"
 #include "wx/treectrl.h"
+
+class WXDLLEXPORT wxButton;
+class WXDLLEXPORT wxCheckBox;
+class WXDLLEXPORT wxTextCtrl;
 
 //-----------------------------------------------------------------------------
 // data
