@@ -1,4 +1,4 @@
-# This file was automatically generated by tmake at 12:46, 2001/10/30
+# This file was automatically generated by tmake at 17:52, 2001/10/30
 # DO NOT CHANGE THIS FILE, YOUR CHANGES WILL BE LOST! CHANGE MOTIF.T!
 ALL_SOURCES = \
 		generic/busyinfo.cpp \
@@ -71,6 +71,7 @@ ALL_SOURCES = \
 		common/dobjcmn.cpp \
 		common/docmdi.cpp \
 		common/docview.cpp \
+		common/dseldlg.cpp \
 		common/dynarray.cpp \
 		common/dynlib.cpp \
 		common/effects.cpp \
@@ -623,6 +624,7 @@ COMMONOBJS = \
 		dobjcmn.o \
 		docmdi.o \
 		docview.o \
+		dseldlg.o \
 		dynarray.o \
 		dynlib.o \
 		effects.o \
