@@ -1,4 +1,4 @@
-# This file was automatically generated by tmake at 12:46, 2001/10/30
+# This file was automatically generated by tmake at 17:52, 2001/10/30
 # DO NOT CHANGE THIS FILE, YOUR CHANGES WILL BE LOST! CHANGE VC.T!
 
 # File:     makefile.vc
@@ -160,6 +160,7 @@ COMMONOBJS = \
 		$(COMMDIR)\$D\dobjcmn.obj \
 		$(COMMDIR)\$D\docmdi.obj \
 		$(COMMDIR)\$D\docview.obj \
+		$(COMMDIR)\$D\dseldlg.obj \
 		$(COMMDIR)\$D\dynarray.obj \
 		$(COMMDIR)\$D\dynlib.obj \
 		$(COMMDIR)\$D\effects.obj \
