@@ -1,6 +1,6 @@
 #!/binb/wmake.exe
 
-# This file was automatically generated by tmake at 12:46, 2001/10/30
+# This file was automatically generated by tmake at 17:52, 2001/10/30
 # DO NOT CHANGE THIS FILE, YOUR CHANGES WILL BE LOST! CHANGE WAT.T!
 
 #
@@ -120,6 +120,7 @@ COMMONOBJS = &
 	dobjcmn.obj &
 	docmdi.obj &
 	docview.obj &
+	dseldlg.obj &
 	dynarray.obj &
 	dynlib.obj &
 	effects.obj &
@@ -780,6 +781,9 @@ docmdi.obj:     $(COMMDIR)\docmdi.cpp
   *$(CCC) $(CPPFLAGS) $(IFLAGS) $<
 
 docview.obj:     $(COMMDIR)\docview.cpp
+  *$(CCC) $(CPPFLAGS) $(IFLAGS) $<
+
+dseldlg.obj:     $(COMMDIR)\dseldlg.cpp
   *$(CCC) $(CPPFLAGS) $(IFLAGS) $<
 
 dynarray.obj:     $(COMMDIR)\dynarray.cpp
