@@ -1,4 +1,4 @@
-# This file was automatically generated by tmake at 12:46, 2001/10/30
+# This file was automatically generated by tmake at 17:52, 2001/10/30
 # DO NOT CHANGE THIS FILE, YOUR CHANGES WILL BE LOST! CHANGE UNIV.T!
 UNIVOBJS = \
 		bmpbuttn.o \
